xml geri döndürülmesi sağlandı

--- a/src/app/pages/operasyon/vardiya-listesi/vardiya-listesi.component.html
+++ b/src/app/pages/operasyon/vardiya-listesi/vardiya-listesi.component.html
@@ -639,6 +639,12 @@
                                 </td>
                                 <td>
                                     <div class="flex gap-2 justify-end">
+                                        <button *ngIf="userRole === 'admin' || userRole === 'patron'" pButton pRipple
+                                            icon="pi pi-replay" class="p-button-rounded p-button-warning p-button-text"
+                                            (click)="onayKaldir(vardiya, $event)" pTooltip="Onayı Kaldır ve Düzenle"
+                                            tooltipPosition="top" [loading]="loading">
+                                        </button>
+
                                         <button pButton pRipple icon="pi pi-eye"
                                             class="p-button-rounded p-button-info p-button-text"
                                             (click)="incele(vardiya)" pTooltip="Vardiya Detaylarını Görüntüle"
